--- a/xrootd_benchmark.ipynb
+++ b/xrootd_benchmark.ipynb
@@ -3,54 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433fc45f-24c1-485b-949d-1d3d7dcdd391",
+   "id": "fe4a6ae7-7c43-49da-8b8d-ccdbf5187936",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import glob\n",
-    "import time\n",
-    "import uproot\n",
-    "import tqdm\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# file = \"root://eos.cms.rcac.purdue.edu//store/data/Run2016B/SingleMuon/NANOAOD/02Apr2020_ver2-v1/20000/014D129C-DD09-A748-BB1C-81184C4A8DDD.root\"\n",
-    "prefix = \"root://eos.cms.rcac.purdue.edu/\"\n",
-    "prefix_mount = \"/eos/purdue/\"\n",
-    "dataset = \"/store/data/Run2016B/SingleMuon/NANOAOD/02Apr2020_ver2-v1\"\n",
-    "datasets = [\n",
-    "    # 2016\n",
-    "    \"/store/data/Run2016B/SingleMuon/NANOAOD/02Apr2020_ver2-v1\",\n",
-    "    \"/store/data/Run2016C/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2016D/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2016E/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2016F/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2016G/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2016H/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    #2017\n",
-    "    \"/store/data/Run2017B/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2017C/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2017D/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2017E/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2017F/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    #2018\n",
-    "    \"/store/data/Run2018A/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2018B/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2018C/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "    \"/store/data/Run2018D/SingleMuon/NANOAOD/02Apr2020-v1\",\n",
-    "]\n",
-    "\n",
-    "files = []\n",
-    "for dataset in datasets:\n",
-    "    ds_files = glob.glob(prefix_mount+dataset+\"/*/*root\")\n",
-    "    print(f\"{dataset}: {len(ds_files)}\")\n",
-    "    files.extend(ds_files)\n",
-    "files = [f.replace(prefix_mount, prefix) for f in files]\n",
-    "# files = [files[0], files[1]]\n",
-    "print(len(files), \"files\")\n",
-    "# print(files[0])"
+    "from utils import get_list_of_files\n",
+    "from datasets.singlemuon_at_purdue import datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b09771-b2fd-4571-b751-4bbf84ac8b08",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# get all ROOT files in datasets\n",
+    "files = get_list_of_files(datasets)\n",
+    "print(len(files), \"files\")"
    ]
   },
   {
@@ -244,9 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 kernel [ML]",
+   "display_name": "Python3 kernel (default)",
    "language": "python",
-   "name": "python3-ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
