measure memory usage per column

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "# get all ROOT files in datasets\n",
     "files = get_list_of_files(datasets)\n",
+    "files = [files[0]]\n",
     "print(len(files), \"files\")"
    ]
   },
@@ -60,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Sequential processing\n",
-    "run_benchmark(process, files, columns)"
+    "run_benchmark(process, files, columns, measure_mem=True)"
    ]
   },
   {
