hide outputs, show plots

--- a/notebooks/3.2_Data-locations.ipynb
+++ b/notebooks/3.2_Data-locations.ipynb
@@ -46,6 +46,10 @@
    "execution_count": 2,
    "id": "fbaa3dfb-80a4-4c2a-a1e5-4f1ab82fc6a1",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -1034,6 +1038,10 @@
    "execution_count": 5,
    "id": "7ff59669-6d18-429d-8c6a-2aa8235f017d",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -2063,6 +2071,10 @@
    "execution_count": 8,
    "id": "7ad0395a-9182-41d4-b935-fd8157a45a04",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -2683,6 +2695,10 @@
    "execution_count": 11,
    "id": "b0a50f14-05f4-4428-8a29-ba2b1c735fdb",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -3731,6 +3747,10 @@
    "execution_count": 14,
    "id": "ac99d506-019c-413c-aba2-32e83de753a2",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -4719,7 +4739,7 @@
    "id": "eb7989c6-8f20-4803-a63d-0514b9ea2008",
    "metadata": {},
    "source": [
-    "Clearly, our datapoints ordering is off "
+    "(Clearly, our datapoints ordering is off) "
    ]
   }
  ],
